--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <p><a href="labs/intro/intro.html">Intro Lab</a></p>
 
         <h3>Lab 1 - Personal Composition</h3>
+        <p><a href="labs/lab1/index.html">Personal Composition</a></p>
     </body>
 </html>
