--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 
         <h3>Lab 1 - Personal Composition</h3>
         <p><a href="labs/lab1/index.html">Personal Composition</a></p>
+
+        <h3>Lab 2 - Animation and Conditional Operators</h3>
+        <p><a href="labs/lab1/index.html">Animation and Conditional Operators</a></p>
     </body>
 </html>
