--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
 
         <h3>Lab 2 - Animation and Conditional Operators</h3>
         <p><a href="labs/lab2/index.html">Animation and Conditional Operators</a></p>
+
+        <h3>Lab 3 - Functions</h3>
+        <p><a href="labs/lab3/index.html">Functions</a></p>
     </body>
 </html>
