--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
 
         <h3>Lab 3 - Functions</h3>
         <p><a href="labs/lab3/index.html">Functions</a></p>
+
+        <h3>Lab 4 - Objects</h3>
+        <p><a href="labs/lab4/index.html">Objects</a></p>
     </body>
 </html>
