--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
 
         <h3>Lab 4 - Objects</h3>
         <p><a href="labs/lab4/index.html">Objects</a></p>
+
+        <h3>Lab 5 - Document Object Manipulation</h3>
+        <p><a href="labs/lab5/index.html">Document Object Manipulation</a></p>
     </body>
 </html>
