--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
 
         <h3>Lab 5 - Document Object Manipulation</h3>
         <p><a href="labs/lab5/index.html">Document Object Manipulation</a></p>
+
+        <h3>Lab 6 - Loops and Arrays</h3>
+        <p><a href="labs/lab6/index.html">Loops and Arrays</a></p>
     </body>
 </html>
