--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
 
         <h3>Lab 6 - Loops and Arrays</h3>
         <p><a href="labs/lab6/index.html">Loops and Arrays</a></p>
+
+        <h3>Lab 7 - Midterm Review</h3>
+        <p><a href="labs/lab7/index.html">Midterm Review</a></p>
     </body>
 </html>
