--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
 
         <h3>Lab 7 - Midterm Review</h3>
         <p><a href="labs/lab7/index.html">Midterm Review</a></p>
+
+        <h3>Lab 8 - User Input</h3>
+        <p><a href="labs/lab8/index.html">User Input</a></p>
     </body>
 </html>
