--- a/index.html
+++ b/index.html
@@ -31,5 +31,8 @@
 
         <h3>Lab 8 - User Input</h3>
         <p><a href="labs/lab8/index.html">User Input</a></p>
+
+        <h3>Lab 9 - Functions</h3>
+        <p><a href="labs/lab9/index.html">Functions</a></p>
     </body>
 </html>
