--- a/index.html
+++ b/index.html
@@ -34,5 +34,8 @@
 
         <h3>Lab 9 - Functions</h3>
         <p><a href="labs/lab9/index.html">Functions</a></p>
+
+        <h3>Lab 10 - Array Computation</h3>
+        <p><a href="labs/lab10/index.html">Array Computation</a></p>
     </body>
 </html>
