--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
 
         <h3>Lab 10 - Array Computation</h3>
         <p><a href="labs/lab10/index.html">Array Computation</a></p>
+
+        <h3>Lab 11 - Events</h3>
+        <p><a href="labs/lab11/index.html">Events</a></p>
     </body>
 </html>
