--- a/index.html
+++ b/index.html
@@ -40,5 +40,8 @@
 
         <h3>Lab 11 - Events</h3>
         <p><a href="labs/lab11/index.html">Events</a></p>
+
+        <h3>Final Project - Concentration Game</h3>
+        <p><a href="labs/finalProject/index.html">Final Project - Concentration Game</a></p>
     </body>
 </html>
